--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
-    "formik": "^2.4.3",
+    "formik": "^2.4.5",
     "modern-normalize": "^2.0.0",
     "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
+    "react-modal": "^3.16.1",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
